updated form index.html

--- a/index.html
+++ b/index.html
@@ -10,5 +10,15 @@
   </head>
   <body>
     <h1>Salary Calculator</h1>
+
+    <form>
+      <!-- Employee Information Fields  -->
+      <input type="text" placeholder="Employee Name" id="nameInput" />
+      <input type="number" placeholder="Salary" id="salaryInput" />
+      <!--- Buttons -->
+      <input type="submit" value="Submit" id="addItemBtn" />
+
+      <input type="submit" value="Delete" id="delItemBtn" />
+    </form>
   </body>
 </html>
