added necessary fields

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
 
     <form>
       <!-- Employee Information Fields  -->
-      <input type="text" placeholder="Employee Name" id="nameInput" />
+      <input type="text" placeholder="Employee First Name" id="fnameInput" />
+      <input type="text" placeholder="Employee Last Name" id="lnameInput" />
+      <input type="text" placeholder="Job Title" id="jobTitle" />
+      <input type="text" placeholder="Employee ID" id="employeeID" />
       <input type="number" placeholder="Salary" id="salaryInput" />
+      <br />
       <!--- Buttons -->
       <input type="submit" value="Submit" id="addItemBtn" />
 
