--- a/index.html
+++ b/index.html
@@ -23,6 +23,31 @@
       <input type="submit" value="Submit" id="addItemBtn" />
 
       <input type="submit" value="Delete" id="delItemBtn" />
+      <center>
+        <table>
+          <thead>
+            <tr>
+              <th scope="col">First Name</th>
+              <th scope="col">Last Name</th>
+              <th scope="col">Job Title</th>
+              <th scope="col">Employee ID</th>
+              <th scope="col">Salary</th>
+            </tr>
+          </thead>
+          <tbody id="employee-information">
+            
+            <td>Peter</td>
+            <td>Nguyen</td>
+            <td>Student at Prime</td>
+            <td>421030</td>
+            <td>0</td>
+            <td><button>Delete</button></td>
+          </tbody>
+        </table>
+        <h4 id="monthly-combined">
+          Total Monthly Cost:
+       
+      </center>
     </form>
   </body>
 </html>
