--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
       <input type="submit" value="Delete" id="delItemBtn" />
       </div>
       
-        <table>
+        <table id="tableStorage">
           <thead>
             <tr>
-              <th scope="col">First Name</th>
-              <th scope="col">Last Name</th>
-              <th scope="col">Job Title</th>
-              <th scope="col">Employee ID</th>
-              <th scope="col">Salary</th>
+              <td>First Name</td>
+              <td>Last Name</td>
+              <td>Job Title</td>
+              <td>Employee ID</td>
+              <td>Salary</td>
             </tr>
           </thead>
-          <tbody id>
+          <tbody id="storage">
             
             <td>Peter</td>
             <td>Nguyen</td>
